fix: broken overflow, minor issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 #root {
-  margin: 0 auto;
+  margin: 0rem;
   padding: 0rem;
-  text-align: center;
 }
 
 input::-webkit-outer-spin-button,
