--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,13 +43,6 @@
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  min-width: 100vw;
-  min-height: 100vh;
-}
-
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
